# food-review-api

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  application-local.yaml  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml
data/: reviews_1.csv  reviews_2.csv
food_review_api/: __init__.py  __main__.py  main.py
food_review_api/api/: README.md  __init__.py  dependencies.py  exceptions.py  health.py  lifespan.py  main.py  middelwares.py
food_review_api/api/schemas/: errors.py  products.py  reviews.py
food_review_api/api/v1/: router.py
food_review_api/api/v1/routes/: products.py  reviews.py
food_review_api/core/config/: __base.py  __config_service_source.py  __init__.py  api.py  configuration.py  database.py  logging.py
food_review_api/products/: __init__.py  repository.py
food_review_api/products/schemas/: __init__.py  product.py  review.py
food_review_api/utils/: logging.py
notebooks/: process_reviews.ipynb
tests/: application-test.yaml  conftest.py
tests/api/: conftest.py  test_api_lifespan.py  test_health_routes.py
tests/products/: test_product_repository.py
tests/utils/: test_logger.py
