[tool.poetry]
name = "food-review-api"
version = "0.1.0"
description = "Food Review API"
authors = ["Carlos Espeleta"]
readme = "README.md"

[tool.poetry.scripts]
food-review-api = "food_review_api:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=food_review_api --cov-report term --cov-report xml:.test_results/coverage.xml --junitxml=.test_results/junit.xml"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
